test2-2023-02-01.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.2597 seconds

  ----Wall Time----  ----Name----
    1.2582 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.1780 ( 93.5%)    Parse modules
    0.0016 (  0.1%)  Rest
    1.2597 (100.0%)  Total

{
  totalTime: 1.274,
  maxMemory: 171921408
}
